--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,6 +7,7 @@ body {
     font-family: 'Barlow Semi Condensed', 'Arial Narrow', Arial, sans-serif;
     background: url("../img/backgroud.jpg") no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     text-align: center;
     padding: 36px;
     }
@@ -14,7 +15,7 @@ body {
 /* Page */
 .hero-page {
     display: flex;
-    flex-wrap: flex;
+    flex-wrap: wrap;
     max-width: 960px;
     text-align: left;
     background: rgba(255,255,255,50%);
@@ -38,6 +39,7 @@ body {
     color: darkgreen;
     max-width: 50%;
     box-sizing:border-box;
+    
 }
 
 h1 { color: black;
