--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,7 +20,7 @@ body {
     text-align: left;
     background: rgba(255,255,255,50%);
     border-radius: 61px;
-    margin-bottom: auto;
+    margin: auto;
     }
 
 /* Image */
